fixed scrollbar styles on hover; added gap between scrollbar handler and comments in post

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -515,7 +515,7 @@
       @include media-breakpoint-up($desktop-breakpoint) {
         position: absolute;
         left: 15px;
-        right: 15px;
+        right: 10px;
         top: 0;
         bottom: 0;
         padding: 0;
@@ -537,6 +537,7 @@
           right: 0;
           top: 0;
           bottom: 0;
+          padding-right: 5px;
         }
       }
     }
